[package]
name = "joule"
version = "0.1.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"
description = "A CLI tool to monitor the energy consumption"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdrouet/joule"
readme = "readme.md"
keywords = ["powercap", "rapl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
powercap = { version = "^0.3.5", features = ["with-serde"] }
procfs = { default-features = false, version = "^0.12" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
powercap = { version = "^0.3.5", features = ["with-serde", "mock"] }
temp-dir = "0.1"
