[package]
name = "joule"
version = "0.2.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
edition = "2021"
description = "A CLI tool to monitor the energy consumption"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdrouet/joule"
readme = "readme.md"
keywords = ["powercap", "rapl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
powercap = { version = "0.3" }
procfs = { default-features = false, version = "0.12" }

[dev-dependencies]
powercap = { version = "0.3", features = ["mock"] }
temp-dir = "0.1"
